--- a/blog/templates/inc/navbar.html.twig
+++ b/blog/templates/inc/navbar.html.twig
@@ -13,6 +13,9 @@
       <li class="nav-item">
         <a href="/blog/new" class="nav-link">New Blog Post</a>
       </li>
+      <li class="nav-item">
+        <a href="/admin/create" class="nav-link">Login</a>
+      </li>
     </ul>
   </div>
 </div>
