--- a/blog/templates/base.html.twig
+++ b/blog/templates/base.html.twig
@@ -9,6 +9,11 @@
     <body>
     {{ include('inc/navbar.html.twig')}}
         <div class="container">
+       {% for message in app.flashes('error') %}
+            <div class="alert alert-warning">
+                {{ message }}
+            </div>
+        {% endfor %}
             {% block body %}{% endblock %}
         </div>
             <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
