--- a/blog/templates/blog/show.html.twig
+++ b/blog/templates/blog/show.html.twig
@@ -6,6 +6,7 @@
     {% if blog %}
        <div>
             <h1>{{ blog.title }}</h1>
+            <p class="h4">Author: {{ blog.author.name }}</p>
             <p>{{ blog.body }}</p>
        </div>
     {% else %}
